--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.57.2",
     "@tailwindcss/vite": "^4.1.11",
     "aios": "^1.0.1",
     "axios": "^1.11.0",
